# aoc2020

will/: Cargo.toml
will-cargo-aoc/: Cargo.toml  README.md
will-cargo-aoc/src/: day15.rs  day16.rs  day17.rs  lib.rs
will-python/day3/: day3.py
will/day1/: Cargo.toml
will/day1/src/: main.rs
will/day10/: Cargo.toml
will/day10/src/: main.rs
will/day11/: Cargo.toml
will/day11/src/: main.rs
will/day12/: Cargo.toml
will/day12/src/: main.rs
will/day13/: Cargo.toml
will/day13/src/: main.rs
will/day14/: Cargo.toml
will/day14/src/: main.rs
will/day2/: Cargo.toml
will/day2/src/: main.rs
will/day3/: Cargo.toml
will/day3/src/: main.rs
will/day4/: Cargo.toml
will/day4/src/: main.rs
will/day5/: Cargo.toml
will/day5/src/: main.rs
will/day6/: Cargo.toml
will/day6/src/: main.rs
will/day7/: Cargo.toml
will/day7/src/: main.rs
will/day8/: Cargo.toml
will/day8/src/: main.rs
will/day9/: Cargo.toml
will/day9/src/: main.rs
