[package]
name = "will-cargo-aoc"
version = "0.1.0"
authors = ["William Findlay <william@williamfindlay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
regex = "1.4.2"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
